--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="hidden lg:flex lg:gap-x-12">
           <a href="index.html" class="text-sm/6 font-semibold text-white border-b border-transparent hover:border-white font-quicksand">Inicio</a>
-          <a href="Documentos.html" class="text-sm/6 font-semibold text-white border-b border-transparent hover:border-white font-quicksand">Documentos</a>
+          <a href="src/Documentos.html" class="text-sm/6 font-semibold text-white border-b border-transparent hover:border-white font-quicksand">Documentos</a>
           <a href="#" class="text-sm/6 font-semibold text-white border-b border-transparent hover:border-white font-quicksand">Tramites</a>
           <a href="#" class="text-sm/6 font-semibold text-white border-b border-transparent hover:border-white font-quicksand">Subida Documentos</a>
         </div>
