--- a/src/Anexo1.html
+++ b/src/Anexo1.html
@@ -27,7 +27,7 @@
             </button>
           </div>
           <div class="hidden lg:flex lg:gap-x-12">
-            <a href="index.html" class="text-sm/6 font-semibold text-black border-b border-transparent hover:border-black font-quicksand">Inicio</a>
+            <a href="/index.html" class="text-sm/6 font-semibold text-black border-b border-transparent hover:border-black font-quicksand">Inicio</a>
             <a href="Documentos.html" class="text-sm/6 font-semibold text-black border-b border-transparent hover:border-black font-quicksand">Documentos</a>
             <a href="#" class="text-sm/6 font-semibold text-black border-b border-transparent hover:border-black font-quicksand">Tramites</a>
             <a href="#" class="text-sm/6 font-semibold text-black border-b border-transparent hover:border-black font-quicksand">Subida Documentos</a>
@@ -55,7 +55,7 @@
             <div class="mt-6 flow-root">
               <div class="-my-6 divide-y divide-white">
                 <div class="space-y-2 py-6">
-                  <a href="index.html" class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white hover:bg-red-900 font-quicksand">Inicio</a>
+                  <a href="/index.html" class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white hover:bg-red-900 font-quicksand">Inicio</a>
                   <a href="Documentos.html" class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white hover:bg-red-900 font-quicksand">Documentos</a>
                   <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white hover:bg-red-900 font-quicksand">Tramites</a>
                   <a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white hover:bg-red-900 font-quicksand">Subida Documentos</a>
