--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               Servicio Social
           </h1>
           <p class="text-xl sm:text-2xl mb-8 max-w-3xl mx-auto">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor.
+            En el CECyTEM, el servicio social es una oportunidad para aplicar tus conocimientos y contribuir a tu comunidad. Con nuestros trámites 100% en línea, gestionar tu servicio social es fácil y accesible. Inscríbete y comienza a marcar la diferencia desde la comodidad de tu hogar.
           </p>
           <a href="#" class="inline-block bg-rojoOficial hover:bg-red-900 text-white font-bold py-3 px-6 rounded-lg transition duration-300 font-quicksand">
               Iniciar trámites
@@ -101,7 +101,7 @@
         <div class="flex flex-col lg:flex-row items-center justify-center gap-8 mb-12">
             <!-- Video -->
             <div class="w-full lg:w-1/2 max-w-2xl">
-                <video src="src/Videos/videoinfomativo.mp4" controls autoplay></video>
+                <video src="src/Videos/videoCreado.mp4" controls autoplay></video>
             </div>
             
             <!-- Imagen de la mascota -->
