--- a/index.html
+++ b/index.html
@@ -198,15 +198,15 @@
                     <ul class="space-y-4">
                         <li class="flex items-center">
                             <i data-feather="map-pin" class="mr-2"></i>
-                            <span>Av. Principal #123, Ciudad, Estado, CP 12345</span>
+                            <span>Calle Cielo Mza. 53, Lote 221, Unidad Hab. Ara Cuatro Vientos, Ixtapaluca, Estado de México, C.P. 56530</span>
                         </li>
                         <li class="flex items-center">
                             <i data-feather="phone" class="mr-2"></i>
-                            <span>+52 (123) 456-7890</span>
+                            <span>(55)59427592</span>
                         </li>
                         <li class="flex items-center">
                             <i data-feather="mail" class="mr-2"></i>
-                            <span>contacto@cecytem.edu.mx</span>
+                            <span>plantel.ixtapaluca2@cecytem.mx</span>
                         </li>
                         <li class="flex items-center">
                             <i data-feather="clock" class="mr-2"></i>
@@ -264,15 +264,15 @@
               <ul class="space-y-2">
                   <li class="flex items-center">
                       <i data-feather="map-pin" class="w-4 h-4 mr-2"></i>
-                      <span>Av. Principal #123, Ciudad, Estado, CP 12345</span>
+                      <span>Calle Cielo Mza. 53, Lote 221, Unidad Hab. Ara Cuatro Vientos, Ixtapaluca, Estado de México, C.P. 56530</span>
                   </li>
                   <li class="flex items-center">
                       <i data-feather="phone" class="w-4 h-4 mr-2"></i>
-                      <span>+52 (123) 456-7890</span>
+                      <span>5559427592</span>
                   </li>
                   <li class="flex items-center">
                       <i data-feather="mail" class="w-4 h-4 mr-2"></i>
-                      <span>contacto@cecytem.edu.mx</span>
+                      <span>plantel.ixtapaluca2@cecytem.mx</span>
                   </li>
                   <li class="flex items-center">
                       <i data-feather="clock" class="w-4 h-4 mr-2"></i>
